Finished the Resources page. Fixed spacing between the submenu items in the menu.

--- a/htdocs/assets/css/header.css
+++ b/htdocs/assets/css/header.css
@@ -17,6 +17,10 @@ and open the template in the editor.
     src: url('../fonts/FreigSanProSem.otf') format('opentype');
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 html { 
     min-width: 1500px;
 }
