--- a/htdocs/assets/css/home.css
+++ b/htdocs/assets/css/home.css
@@ -76,10 +76,6 @@ p.learn-more {
     margin-top: -4pt;
 }
 
-a:hover {
-    text-decoration: none;
-}
-
 #line2 {
     margin-top: -8pt;
 }
